refactor : refactor empty list to collection list